--- a/spark-cluster/docker-compose.yml
+++ b/spark-cluster/docker-compose.yml
@@ -50,8 +50,8 @@ services:
       - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
       - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=1
       - ALLOW_PLAINTEXT_LISTENER=yes
-#    volumes:
-#      - kafka-data:/opt/bitnami/kafka/data
+    volumes:
+      - kafka-data:/opt/bitnami/kafka/data
 
 volumes:
   kafka-data:
